--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "classnames": "^2.2.5",
     "immutable": "^3.8.2",
     "node-sass-chokidar": "^1.1.0",
     "npm-run-all": "^4.1.2",
@@ -14,7 +15,8 @@
     "react-thunk": "^1.0.0",
     "redux": "^3.7.2",
     "redux-immutable": "^4.0.0",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "uuid": "^3.2.1"
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/assets/scss -o src/assets/css",
