--- a/package.json
+++ b/package.json
@@ -26,6 +26,12 @@
     "build-js": "react-scripts build",
     "build": "npm-run-all build-css build-js",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+  },
+  "homepage": "https://lsxbread.github.io/react_snake",
+  "devDependencies": {
+    "gh-pages": "^1.1.0"
   }
 }
