--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-scripts": "1.1.1",
     "react-thunk": "^1.0.0",
     "redux": "^3.7.2",
+    "redux-batched-updates": "^0.1.0",
     "redux-immutable": "^4.0.0",
     "redux-thunk": "^2.2.0",
     "uuid": "^3.2.1"
